--- a/projetos individuais/projeto pecing/style.css
+++ b/projetos individuais/projeto pecing/style.css
@@ -1,70 +1,147 @@
 @charset "UTF-8";
 
+/* FONTES */
+
+@import url('https://fonts.googleapis.com/css2?family=Amethysta&display=swap');
+
+@font-face {
+    font-family: "Javanese Text";
+    src: url(javanese-text.ttf);
+}
+
+@font-face {
+    font-family: "JejuGothic";
+    src: url(JejuGothic-Regular.ttf);
+}
+
+:root {
+    --fonte-cab: "Amethysta", serif;
+    --fonte-padrao: "Javanese Text", serif; 
+}
+
 * {
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 0px;
-    margin: 0px;
-}
-
-body {
-    background-color: #232323;
+    font-family: var(--fonte-padrao);
     color: white;
-}
-
-header {
-    background-color: #8E6534;
-    text-align: center;
-}
-
-header > h1 {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 4em;
-    color: #503721;
-    padding: 15px;
-}
-
-header nav {
-    display: flex;
-    justify-content: flex-end;
-    gap: 24px;
-    background-color: #D9D9D9;
-    padding: 5px;
-}
-
-.cabecalho-menu-item {
-    color: black;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     text-decoration: none;
 }
 
-.conteudo-principal {
-    margin: 0;
-    padding: 0;
+body {
+    font-size: 100%;
+    background-color: #1E1E1E;
+}
+
+
+
+.cabecalho {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-around;
+    padding: 24px;
+    padding-right: 0px;
+    margin: auto;
+
 }
 
-.conteudo-principal-escrito {
+.cabecalho-titulo {
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: center;
+    font-family: var(--fonte-cab);
+    font-weight: 400;
+    font-size: 92px;
+    text-transform: uppercase;
+    text-align: left;
+}
+
+.cabecalho-imagem {
     display: flex;
-    flex-direction: column;
+    width: 125.49px;
+    height: 120px;
+    border-radius: 12px;
+    margin-right: 128px;
+}
+
+.cabecalho-menu {
+    display: flex;
+    gap: 64px;
+}
+
+.cabecalho-menu-item {
+    font-size: 2.5em;
+}
+
+.conteudo-principal {
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-around;
 }
 
-.conteudo-principal-escrito-titulo {
-    margin: 0;
-    text-align: center;
-    width: 50%;
-    font-size: 2.5em;
+.conteudo-principal-imagem {
+    width: 400px;
+    height: 430.88px;
+    border-radius: 50%;
 }
 
-.conteudo-principal-escrito-paragrafo {
-    margin: 0;
+.conteudo-principal-texto {
+    width: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
     text-align: center;
-    width: 50%;
-    font-size: 1.5em;
+    margin-top: 32px;
 }
 
-.foto-pecing {
-    width: 20%;
+.conteudo-principal-texto-titulo {
+    font-weight: 400;
+    font-size: 64px;
+}
+
+.conteudo-principal-texto-paragrafo {
+    font-size: 24px;
+}
+
+.conteudo-principal-texto-botao {
+    font-family: "JejuGothic" ;
+    font-size: 20px;
+    background-color: #2A66A5;
+    box-shadow: 2px rgba(0, 0, 0, 0.192);
+    width: 300px;
+    height: 100px;
+    border-radius: 50px;
+}
+
+.conteudo-principal-texto-botao:hover {
+    background-color: #3a8ae0;
+    transition: 0.3s all;
+    cursor: pointer;
+}
+
+.rodape {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+}
+
+.rodape-creditos {
+    text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+    .cabecalho {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .cabecalho-imagem {
+        margin: 0;
+    }
 }
